메인피드 최신글 태그 누를 때 댓글 연결.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -54,7 +54,7 @@ userJoin.imgsize=Only images with a size lower than 3MB are allowed.
 
 #userJoin - Step5
 userJoin.step5=You're all set. Ready?
-userJoin.imgsize=Congratz, you successfully created your account. 
+userJoin.welcome=Congratz, you successfully created your account. 
 
 #프로필
 profile.mystamp=My Stamp
