커밋테스트

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -5,7 +5,37 @@ msg.first=first
 errormsg=An error has occurred. Please contact the admin.
 btn.check=CHECK
 topic=Topics of Interest
+follow=Follow
+unfollow=Unfollow
 
+time.1=Just now
+time.2=m
+time.3=h
+time.4=days
+
+
+############### HEAD ###################
+head.feed=FEED
+head.friends=FRIENDS
+head.letter=LETTER
+head.notice=NOTICE
+head.mypage=My profile
+head.logout=Logout
+
+push.lang=Language
+push.noti=Notifications
+push.letters=Letter
+push.clear=Claer All
+
+push.comment= wrote a comment on your post.
+push.follow= is following you.
+push.like= likes your posts.
+push.letter=A letter from {0} is comming.
+push.comming=A letter is comming.
+push.alert=There is a new alarm.
+
+
+############### 회원가입 ###################
 #userJoin - Step1
 userJoin.step1=Let's get started.
 
@@ -56,8 +86,10 @@ userJoin.imgsize=Only images with a size lower than 3MB are allowed.
 userJoin.step5=You're all set. Ready?
 userJoin.welcome=Congratz, you successfully created your account. 
 
-#프로필
+
+############### 프로필 ###################
 profile.mystamp=My Stamp
+profile.letter=✍Write a letter
 profile.edit=✍Edit My profile
 profile.basicinfos=Basic Infos
 profile.regdt=Joining Date
