--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -5,7 +5,37 @@ msg.first=첫번째
 errormsg=에러가 발생했습니다. 관리자에게 문의해주세요.
 btn.check=중복확인
 topic=관심사
+follow=팔로우
+unfollow=팔로우 취소
 
+time.1=방금전
+time.2=분전
+time.3=시간전
+time.4=일전
+
+
+############### HEAD ###################
+head.feed=피드
+head.friends=친구찾기
+head.letter=편지
+head.notice=공지사항
+head.mypage=마이페이지
+head.logout=로그아웃
+
+push.lang=언어
+push.noti=알람
+push.letters=편지
+push.clear=모두 지우기
+
+push.comment=님이 회원님의 게시글에 댓글을 남겼습니다.
+push.follow=님이 회원님을 팔로우합니다.
+push.like=님이 회원님의 게시물을 좋아합니다.
+push.letter={0}님으로부터 편지가 오고 있습니다.
+push.comming=편지가 오고있습니다.
+push.alert=새로운 알람이 있습니다.
+
+
+############### 회원가입 ###################
 #userJoin - Step1
 userJoin.step1=시작해볼까요?
 
@@ -37,10 +67,8 @@ userJoin.email.wrong=인증번호가 틀립니다.
 userJoin.email.btn=코드발송
 userJoin.email.checkbtn=코드확인
 
-
 #userJoin - Step2
 userJoin.step2=위치를 공유해주세요.
-
 userJoin.getlocation=위치확인
 
 #userJoin - Step3
@@ -58,8 +86,10 @@ userJoin.imgsize=이미지는 3MB내로만 업로드 가능합니다.
 userJoin.step5=환영합니다!
 userJoin.welcome=계정이 성공적으로 생성되었습니다.
 
-#프로필
+
+############### 프로필 ###################
 profile.mystamp=내 우표함
+profile.letter=✍편지쓰기
 profile.edit=✍내 정보 수정
 profile.basicinfos=기본정보
 profile.regdt=가입일
