다국어 설정, 헤더수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -99,3 +99,17 @@ profile.gender=Gender
 profile.aboutme=About Me
 profile.trips=Trips
 profile.posts=Posts
+
+
+############### 프로필 수정 ###################
+usersUpdate.edit=Edit Basic Infos
+usersUpdate.email=Email
+usersUpdate.code=Email Code
+usersUpdate.password=Password
+usersUpdate.password2=Password Check
+usersUpdate.language=Language
+usersUpdate.location=Location
+usersUpdate.max=You can enter up to 1000 bytes.
+
+btn.deleteAccount=Delete Account
+btn.save=SAVE
