--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -61,7 +61,7 @@ userJoin.email.enter=이메일을 입력하세요.
 userJoin.email.blank=이메일은 비워둘 수 없습니다.
 userJoin.email.inuse=이미 사용중인 이메일입니다.
 userJoin.email.sendmail=인증 메일을 발송하였습니다. 메일함을 확인해주세요.
-userJoin.email.entercode=인증코드를 입력하세요.
+userJoin.email.entercode=이메일 인증코드를 입력하세요.
 userJoin.email.checked=이메일 인증이 완료되었습니다.
 userJoin.email.wrong=인증번호가 틀립니다. 
 userJoin.email.btn=코드발송
@@ -100,10 +100,23 @@ profile.aboutme=자기소개
 profile.trips=방문한 나라
 profile.posts=게시글
 
-#------편지--------------------------------------------------
+############### 프로필 수정 ###################
+usersUpdate.edit=기본정보 수정
+usersUpdate.email=이메일
+usersUpdate.code=이메일인증
+usersUpdate.password=비밀번호
+usersUpdate.password2=비밀번호 확인
+usersUpdate.language=배울 언어
+usersUpdate.location=위치
+usersUpdate.max=최대 1000바이트까지 입력 가능합니다.
+
+btn.deleteAccount=계정삭제
+btn.save=저장하기
+
+############### 편지 ###################
 #왼쪽 사이드바
-letter.sidebar.new=새로운편지
-letter.sidebar.save=임시편지
+letter.sidebar.new=새 편지
+letter.sidebar.save=임시보관함
 letter.sidebar.close=닫기
 
 #셀렉트 옵션(번역)
@@ -114,7 +127,7 @@ letter.select.option.en=영어
 #버튼
 letter.btn.corr=교정
 letter.btn.del=삭제
-letter.btn.send=편지보내기
+letter.btn.send=📧편지 보내기
 letter.btn.save=임시저장
 letter.btn.report=신고
 letter.btn.submit=전송
@@ -137,29 +150,29 @@ letter.report.block=차단
 letter.report.success=신고되었습니다.
 
 #편지작성영역
-letter.title.write=작성
+letter.title.write=답장쓰기
 letter.textarea.placeholder=편지를 작성해주세요.
 
 letter.alert.blank=내용을 입력하세요.
 letter.alert.min=최소 100자를 입력해주세요.
-letter.alert.max=최대 10000자까지 입력 가능합니다.
+letter.alert.max=최대 10000바이트까지 입력 가능합니다.
 letter.alert.errormsg=에러가 발생했습니다. 관리자에게 문의해주세요.
 
 letter.confirm.send=편지를 전송하시겠습니까?
 letter.send.success=편지가 전송되었습니다.
-letter.send.fail=편지전송실패!
-letter.send.five=하루에 5통만 전송할 수 있습니다.
+letter.send.fail=편지전송 실패
+letter.send.five=하루에 편지는 5통까지 보낼 수 있습니다. \n 내일 다시 시도해주세요.
 
 letter.confirm.save=편지를 저장하시겠습니까?
 letter.confirm.save.no=편지작성이 취소되었습니다.
 letter.save.success=편지가 저장되었습니다.
-letter.save.fail=편지저장실패!
+letter.save.fail=편지저장 실패
 
-letter.stamp.check=우표수량을 확인해주세요
+letter.stamp.check=보유한 우표가 없습니다.
 
 letter.confirm.delete=편지를 삭제하시겠습니까?
 letter.delete.success=편지가 삭제되었습니다.
-letter.delete.fail=편지삭제실패!
+letter.delete.fail=편지삭제 실패
 letter.confirm.no=취소되었습니다.
 
 letter.corr.success=작성되었습니다.
@@ -174,7 +187,7 @@ letter.within.hour=한 시간 이내 도착
 letter.to.msg=편지가 오고 있어요. 조금만 기다려주세요. 편지가 배달오고 있습니다.
 letter.from.msg=편지가 가고 있어요. 조금만 기다려주세요. 편지 배달중입니다. 
 
-#------메인피드--------------------------------------------------
+############### 메인피드 ###################
 #출석
 feed.check.title=출석체크
 feed.check.done=출석완료
