친구 메세지프로퍼티

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -260,3 +260,29 @@ comment.report.block=차단
 
 comment.report.success=신고되었습니다.
 #-------------------------------------------------------
+############### 친구찾기 ###################
+#친구찾기옵션
+friends.search.age=나이 
+friends.search.age.and=부터
+friends.search.gender=성별
+friends.search.gender.all=무관
+friends.search.gender.m=남
+friends.search.gender.w=여
+friends.search.gender.o=기타
+
+friends.search.country=국가
+friends.search.all=전체
+
+friends.search.language= 언어
+friends.search.language.ko=한국어
+friends.search.language.en=영어
+friends.search.topic=관심사
+friends.search=검색
+friends.all=전체
+friends.new=새친구
+#친구찾기메인
+friends.search.topic.count=나와 일치하는 관심사 
+friends.search.new=가입
+friends.search.more=더보기
+friends.people.count=명의 친구들 
+#-------------------------------------------------------
