프로필에서 편지도착시간 확인되도록 추가.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -100,7 +100,7 @@ profile.gender=성별
 profile.aboutme=자기소개
 profile.trips=방문한 나라
 profile.posts=게시글
-
+profile.time=편지가 {0}시간 후에 전달됩니다.
 
 ############### 프로필-수정 ###################
 usersUpdate.edit=기본정보 수정
@@ -186,7 +186,7 @@ letter.alert.errormsg=에러가 발생했습니다. 관리자에게 문의해주
 letter.confirm.send=편지를 전송하시겠습니까?
 letter.send.success=편지가 전송되었습니다.
 letter.send.fail=편지전송 실패
-letter.send.five=하루에 편지는 5통까지 보낼 수 있습니다. \n 내일 다시 시도해주세요.
+letter.send.five=하루에 편지는 5통까지 보낼 수 있습니다. 내일 다시 시도해주세요.
 
 letter.confirm.save=편지를 저장하시겠습니까?
 letter.confirm.save.no=편지작성이 취소되었습니다.
