우표상점, 마이페이지 우표함 약간의 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -286,3 +286,11 @@ friends.search.new=가입
 friends.search.more=더보기
 friends.people.count=명의 친구들 
 #-------------------------------------------------------
+############### 우표상점 ###################
+stamp.shop.title=우표 상점
+stamp.name=우표 꾸러미
+stamp.buy.button=구매
+stamp.my=내 스탬프 보유 현황
+stamp.my.title=우표
+stamp.event.title=우표적립 이벤트
+stamp.event=현재 진행 중인 우표적립 이벤트가 없습니다.
