--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -287,4 +287,11 @@ friends.search.new=가입
 friends.search.more=더보기
 friends.people.count=명의 친구들 
 #-------------------------------------------------------
-
+############### 우표상점 ###################
+stamp.shop.title=STAMP SHOP
+stamp.name=stamp package
+stamp.buy.button=Buy
+stamp.my=STATUS OF MY STAMP RETENTION
+stamp.my.title=STAMP
+stamp.event.title=Accrual Event
+stamp.event=There are currently no stamp collecting events in progress.
