우표상점 약간의 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -136,6 +136,7 @@ stamph.pay=Purchase
 stamph.post=Write a post
 stamph.buy1=Would you like to write to more friends?
 stamph.buy2=Buy stamps
+stamph.guide=*From the most recent history to 15 cases are printed.
 
 
 ############### 편지 ###################
@@ -295,3 +296,4 @@ stamp.my=STATUS OF MY STAMP RETENTION
 stamp.my.title=STAMP
 stamp.event.title=Accrual Event
 stamp.event=There are currently no stamp collecting events in progress.
+stamp.cnt=ea
