--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -136,6 +136,7 @@ stamph.pay=우표구매
 stamph.post=게시글 작성
 stamph.buy1=더 많은 친구들에게 편지를 쓰고싶으신가요?
 stamph.buy2=우표 구매하러 가기
+stamph.guide=*최근 이력부터 15건까지 출력됩니다.
 
 
 ############### 편지 ###################
@@ -294,3 +295,4 @@ stamp.my=내 스탬프 보유 현황
 stamp.my.title=우표
 stamp.event.title=우표적립 이벤트
 stamp.event=현재 진행 중인 우표적립 이벤트가 없습니다.
+stamp.cnt=개
