--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -297,3 +297,48 @@ stamp.my.title=STAMP
 stamp.event.title=Accrual Event
 stamp.event=There are currently no stamp collecting events in progress.
 stamp.cnt=ea
+stamp.back.button=back
+#-------------------------------------------------------
+############### ID/PW 찾기 ###################
+#findIdPw
+findIdPw.title=forgot ID/password?
+findIdPw.title2=Choose between Find ID and Find Password.
+findIdPw.button.id=Find ID
+findIdPw.button.pw=Find Password
+find.trouble=Having trouble? Please press our Help Center for a quick answer to your problem.
+
+#ID1
+id.title=Find ID
+id.title2=Check your Email.
+mail.title=Email
+enter.mail=Enter your email address
+check.button=Check
+verification.title=Verification Code
+enter.verification=Enter verification code
+verification.button=Verification
+
+#ID2
+id.title3=Find your ID!
+go.login.button=Login
+
+#PW
+pw.title=Find PASSWORD
+pw.title2=Checking your ID/Email.
+id.check.title=ID
+enter.id=Enter your ID
+forget.id=forgot ID. ▶Find ID
+
+#alert
+check.alert=Error! Please contact the administrator.
+
+mail.check.alert1=Empty email address! Enter email address.
+mail.check.alert2=Members cannot be viewed with the entered email address. Sign up for membership.
+mail.check.alert.v=Verification code sent by your e-mail.
+mail.check.alert.p=Temporary password sent by your e-mail.
+
+id.check.alert1=Empty id! Enter id.
+id.check.alert2=Members cannot be viewed with the entered id. Sign up for membership.
+id.check.alert3=Member exists. Check your email.
+
+v.check.alert1=Empty verification code! Enter verification code.
+v.check.alert2= Mismatched verification code. Enter it correctly.
