공지사항/qna 메세지프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -342,3 +342,33 @@ id.check.alert3=Member exists. Check your email.
 
 v.check.alert1=Empty verification code! Enter verification code.
 v.check.alert2= Mismatched verification code. Enter it correctly.
+
+############### 공지사항 ###################
+notice.table.notice=NOTICE
+notice.table.title=Title
+notice.table.regdate=Reg_date
+notice.table.writer=Writer
+notice.table.hit=Hit
+notice.table.back=Go Back
+notice.table.list=List
+notice.table.uploadfile=Upload File
+notice.table.emptyfile=Empty File
+
+############### 문의하기 ###################
+qna.title=Q&A
+qna.name=Name
+qna.name.placeholder=Enter your name.
+qna.email=Email
+qna.email.placeholder=Enter your email address.
+qna.content=Content
+qna.content.placeholder=Please write your content here.
+qna.back=Go Back
+qna.form.send=Send
+qna.notice.content1=※If you have any questions, please contact us.
+qna.notice.content2=※Please enter your email address correctly.
+qna.alert.name=Enter your name.
+qna.alert.email=Enter your email address.
+qna.alert.content=Please write your content here.
+qna.alert.sendyn=Would you like to write an inquiry?
+qna.alert.sendy=Written.
+qna.alert.sendn=Canceled.
