생일 유저 편지쓰기 , 친구찾기 버튼 제거!

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -282,7 +282,8 @@ friends.search=검색
 friends.all=전체
 friends.new=새친구
 #친구찾기메인
-friends.search.topic.count=일치하는 관심사 
+friends.search.topic.count=일치하는 관심사
+friends.search.topic.count2=개 
 friends.search.new=가입
 friends.search.more=더보기
 friends.people.count=명의 친구들 
