--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -293,10 +293,11 @@ friends.people.count=명의 친구들
 stamp.shop.title=STAMP SHOP
 stamp.name=stamp package
 stamp.buy.button=Buy
-stamp.my=STATUS OF MY STAMP RETENTION
-stamp.my.title=STAMP
+stamp.event=EVENT
+stamp.event.title2=New Stamp package Event
+stamp.event.c2=There are currently no New Stamp package events in progress.
 stamp.event.title=Accrual Event
-stamp.event=There are currently no stamp collecting events in progress.
+stamp.event.c=There are currently no stamp accumulate events in progress.
 stamp.cnt=ea
 stamp.back.button=back
 #-------------------------------------------------------
