--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -292,10 +292,11 @@ friends.people.count=명의 친구들
 stamp.shop.title=우표 상점
 stamp.name=우표 꾸러미
 stamp.buy.button=구매
-stamp.my=내 스탬프 보유 현황
-stamp.my.title=우표
+stamp.event=이벤트
+stamp.event.title2=신규 우표꾸러미 이벤트
+stamp.event.c2=현재 진행 중인 신규 우표꾸러미 이벤트가 없습니다.
 stamp.event.title=우표적립 이벤트
-stamp.event=현재 진행 중인 우표적립 이벤트가 없습니다.
+stamp.event.c=현재 진행 중인 우표적립 이벤트가 없습니다.
 stamp.cnt=개
 stamp.back.button=뒤로가기
 #-------------------------------------------------------
