메세지프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -373,3 +373,20 @@ qna.alert.content=Please write your content here.
 qna.alert.sendyn=Would you like to write an inquiry?
 qna.alert.sendy=Written.
 qna.alert.sendn=Canceled.
+
+############### 통합검색 ###################
+search.result=Search Results
+search.notice.title=Notice
+search.feed.title=FEED
+search.feed.tags=Tags
+search.feed.content=Content
+search.feed.num=Feed_id
+search.comment.title=Comments
+search.comment.num=Comment_id
+search.comment.content=Content
+search.commentc.title=Correct comment
+search.commentc.num=Commentc_id
+search.commentc.origin=Original content
+search.commentc.correct=Correcting content
+search.user.id=USER
+search.no.result=No search results.
