--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko.properties
@@ -373,3 +373,19 @@ qna.alert.sendyn=문의사항을 작성하시겠습니까?
 qna.alert.sendy=작성되었습니다.
 qna.alert.sendn=취소되었습니다.
 
+############### 통합검색 ###################
+search.result=검색결과
+search.notice.title=공지사항
+search.feed.title=피드
+search.feed.tags=태그
+search.feed.content=피드내용
+search.feed.num=피드번호
+search.comment.title=댓글
+search.comment.num=댓글번호
+search.comment.content=댓글내용
+search.commentc.title=교정댓글
+search.commentc.num=댓글번호
+search.commentc.origin=원글내용
+search.commentc.correct=교정내용
+search.user.id=유저
+search.no.result=검색결과 없음.
