--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -174,6 +174,7 @@ letter.report.etc=기타
 letter.report.block=차단
 
 letter.report.success=신고되었습니다.
+letter.report.did=신고내역이 존재합니다.
 
 #편지작성영역
 letter.title.write=답장쓰기
@@ -261,6 +262,7 @@ comment.report.etc=기타
 comment.report.block=차단
 
 comment.report.success=신고되었습니다.
+comment.report.did=신고내역이 존재합니다.
 #-------------------------------------------------------
 ############### 친구찾기 ###################
 #친구찾기옵션
