편지 메세지 추가.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -212,9 +212,10 @@ letter.in.hour=시간 후 도착
 letter.within.hour=한 시간 이내 도착
 
 letter.to.msg=편지가 오고 있어요. 조금만 기다려주세요. 편지가 배달오고 있습니다.
-letter.from.msg=편지가 가고 있어요. 조금만 기다려주세요. 편지 배달중입니다. 
+letter.from.msg=편지가 가고 있어요. 조금만 기다려주세요. 편지 배달중입니다.  
 
-
+#편지작성창
+letter.popup.today.send=오늘은 이미 보내셨어요!
 ############### 메인피드 ###################
 #생일
 feed.birth.msg1=´s {0}th Birthday!
