피드 메세지프로퍼티

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -216,11 +216,67 @@ letter.from.msg=편지가 가고 있어요. 조금만 기다려주세요. 편지
 
 #편지작성창
 letter.popup.today.send=오늘은 이미 보내셨어요!
+
 ############### 메인피드 ###################
 #생일
 feed.birth.msg1=´s {0}th Birthday!
 feed.birth.msg2=Send them your best wishes by writing a letter.
 
+#더보기
+feed.loadmore=Load More
+
+#인기있는주제
+feed.tag.title=Hot tag
+
+#공지사항
+feed.notice.title=Notice
+
+#친구추천
+feed.friend.title=친구추천
+feed.friend.topic=일치하는관심사
+feed.friend.topic2=개
+
+#작성
+feed.feed.publish=Publish
+feed.feed.text=Share moments related to your language and culture
+feed.feed.photo=Photo
+feed.feed.tag=Tag
+feed.feed.stamp=스탬프 1개가 지급되었습니다
+feed.insert.tag=Please enter your tags
+feed.confirm.delete=삭제하시겠습니까?
+
+#버튼
+feed.new=New
+feed.neer=Neer
+feed.tag=Tag
+feed.ko=Korean
+feed.en=English
+
+#드롭다운
+feed.drop.trans=번역
+feed.drop.corr=교정
+feed.drop.report=Report
+feed.drop.update=Update
+feed.drop.delete=Delete
+
+#피드신고 
+feed.confirm.report=신고하시겠습니까?
+feed.report.blank=신고이유를 입력하세요.
+feed.report.text.empty=신고 사유를 선택하세요.
+feed.report.input.placeholder=신고이유
+
+feed.report.success=신고되었습니다.
+feed.report.did=신고내역이 존재합니다.
+feed.alert.errormsg=관리자에게 문의해주세요.
+
+feed.report.btn=Report
+feed.report.content=스팸게시물
+feed.report.lie=가짜정보 제공
+feed.report.sexual=성적인 내용
+feed.report.date=데이트가 목적인 내용
+feed.report.word=욕설/비방
+feed.report.etc=Etc
+feed.report.block=Block
 
 #출석
 feed.check.title=출석체크
@@ -266,31 +322,33 @@ comment.report.success=신고되었습니다.
 comment.report.did=신고내역이 존재합니다.
 #-------------------------------------------------------
 ############### 친구찾기 ###################
+
 #친구찾기옵션
-friends.search.age=나이 
-friends.search.age.and=부터
-friends.search.gender=성별
-friends.search.gender.all=무관
-friends.search.gender.m=남
-friends.search.gender.w=여
-friends.search.gender.o=기타
+friends.search.age=Age
+friends.search.age.and=And
+friends.search.gender=Gender
+friends.search.gender.all=All
+friends.search.gender.m=Man
+friends.search.gender.w=Woman
+friends.search.gender.o=Other
 
-friends.search.country=국가
-friends.search.all=전체
+friends.search.country=Country
+friends.search.all=All
 
-friends.search.language= 언어
-friends.search.language.ko=한국어
-friends.search.language.en=영어
-friends.search.topic=관심사
-friends.search=검색
-friends.all=전체
-friends.new=새친구
+friends.search.language= Language
+friends.search.language.ko=Korean
+friends.search.language.en=English
+friends.search.topic=Topic
+friends.search=Search
+friends.all=All
+friends.new=New
+
 #친구찾기메인
-friends.search.topic.count=일치하는 관심사
-friends.search.topic.count2=개  
-friends.search.new=가입
-friends.search.more=더보기
-friends.people.count=명의 친구들 
+friends.search.topic.count=
+friends.search.topic.count2= matching interests 
+friends.search.new=join
+friends.search.more=Load More
+friends.people.count='s friends 
 #-------------------------------------------------------
 ############### 우표상점 ###################
 stamp.shop.title=STAMP SHOP
