--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -343,6 +343,9 @@ friends.search=Search
 friends.all=All
 friends.new=New
 
+#검색결과
+friends.search.no=No matching results
+
 #친구찾기메인
 friends.search.topic.count=
 friends.search.topic.count2= matching interests 
