--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -342,6 +342,8 @@ friends.search.topic=관심사
 friends.search=검색
 friends.all=전체
 friends.new=새친구
+#검색결과
+friends.search.no=검색결과가 없습니다. 
 #친구찾기메인
 friends.search.topic.count=일치하는 관심사
 friends.search.topic.count2=개 
