--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -349,7 +349,7 @@ friends.search.no=No matching results
 #친구찾기메인
 friends.search.topic.count=
 friends.search.topic.count2= matching interests 
-friends.search.new=join
+friends.search.new= Join
 friends.search.more=Load More
 friends.people.count='s friends 
 #-------------------------------------------------------
