--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -134,6 +134,7 @@ stamph.login=출석체크
 stamph.letter={0}에게 편지 작성
 stamph.pay=우표구매
 stamph.post=게시글 작성
+stmaph.join=회원가입 축하 우표
 stamph.buy1=더 많은 친구들에게 편지를 쓰고싶으신가요?
 stamph.buy2=우표 구매하러 가기
 stamph.guide=*최근 이력부터 15건까지 출력됩니다.
