편지 사진적용중.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -178,6 +178,7 @@ letter.report.success=신고되었습니다.
 letter.report.did=신고내역이 존재합니다.
 
 #편지작성영역
+letter.title.to={0}에게
 letter.title.write=답장쓰기
 letter.textarea.placeholder=편지를 작성해주세요.
 
