프로필에 post 붙이기

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -228,15 +228,15 @@ feed.birth.msg2=Send them your best wishes by writing a letter.
 feed.loadmore=Load More
 
 #인기있는주제
-feed.tag.title=Hot tag
+feed.tag.title=Trending
 
 #공지사항
 feed.notice.title=Notice
 
 #친구추천
-feed.friend.title=친구추천
-feed.friend.topic=일치하는관심사
-feed.friend.topic2=개
+feed.friend.title=Suggest for You
+feed.friend.topic=Matched :
+feed.friend.topic2=
 
 #작성
 feed.feed.publish=Publish
@@ -248,8 +248,8 @@ feed.insert.tag=Please enter your tags
 feed.confirm.delete=삭제하시겠습니까?
 
 #버튼
-feed.new=New
-feed.neer=Neer
+feed.new=Newest
+feed.neer=Near
 feed.tag=Tag
 feed.ko=Korean
 feed.en=English
@@ -281,12 +281,12 @@ feed.report.etc=Etc
 feed.report.block=Block
 
 #출석
-feed.check.title=출석체크
-feed.check.done=오늘의 우표를 받으셨습니다.
-feed.check.click=클릭해서 오늘의 우표를 받으세요!
-feed.check.stamp.today=하루에 한번만 받을 수 있어요.
-feed.check.stamp.plus=우표 1개가 지급되었어요.
-feed.check.alert.errormsg=에러가 발생했습니다. 관리자에게 문의해주세요.
+feed.check.title=Daily Event
+feed.check.done=You received today's stamp.
+feed.check.click=Click here to receive today's stamps
+feed.check.stamp.today=You can get it only once a day.
+feed.check.stamp.plus=You got a stamp!
+feed.check.alert.errormsg=An error has occurred. Please contact the admin.
 
 #댓글
 comment.h4.title=댓글
@@ -300,7 +300,7 @@ comment.confirm.delete=삭제하시겠습니까?
 comment.delete.success=댓글이 삭제되었습니다.
 comment.delete.fail=댓글삭제실패!
 
-comment.alert.errormsg=에러가 발생했습니다. 관리자에게 문의해주세요.
+comment.alert.errormsg=An error has occurred. Please contact the admin.
 
 #댓글작성
 comment.textarea.placeholder=댓글을 입력하세요.
@@ -423,7 +423,7 @@ notice.table.uploadfile=Upload File
 notice.table.emptyfile=Empty File
 
 ############### 문의하기 ###################
-qna.title=Q&A
+qna.title=Contact Us
 qna.name=Name
 qna.name.placeholder=Enter your name.
 qna.email=Email
