피드 메시지프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -224,6 +224,12 @@ letter.popup.today.send=오늘은 이미 보내셨어요!
 feed.birth.msg1=´s {0}th Birthday!
 feed.birth.msg2=Send them your best wishes by writing a letter.
 
+#좋아요 
+feed.like.user1=and 
+feed.like.user2=more liked this
+feed.like=Like 
+feed.like.cancle=Like Cancle 
+
 #더보기
 feed.loadmore=Load More
 
