--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -224,6 +224,11 @@ letter.popup.today.send=오늘은 이미 보내셨어요!
 feed.birth.msg1=님의 {0}번째 생일!
 feed.birth.msg2=편지를 보내 생일을 축하해 주세요.
 
+#좋아요 
+feed.like.user1=외 
+feed.like.user2=명이 이 글을 좋아합니다.
+feed.like=좋아요
+feed.like.cancle=좋아요 취소 
 #더보기
 feed.loadmore=더보기
 
