--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -255,7 +255,7 @@ feed.confirm.delete=삭제하시겠습니까?
 
 #버튼
 feed.new=Newest
-feed.neer=Near
+feed.friend=Friends
 feed.tag=Tag
 feed.ko=Korean
 feed.en=English
