영어 메세지 변경.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -142,82 +142,82 @@ stamph.guide=*From the most recent history to 15 cases are printed.
 
 ############### 편지 ###################
 #왼쪽 사이드바
-letter.sidebar.new=새 편지
-letter.sidebar.save=임시보관함
-letter.sidebar.close=닫기
+letter.sidebar.new=New letter
+letter.sidebar.save=Drafts
+letter.sidebar.close=Close
 
 #셀렉트 옵션(번역)
-letter.select.option.hidden=번역
-letter.select.option.ko=한국어
-letter.select.option.en=영어
+letter.select.option.hidden=Translate
+letter.select.option.ko=Korean
+letter.select.option.en=English
 
 #버튼
-letter.btn.corr=교정
-letter.btn.del=삭제
-letter.btn.send=📧편지 보내기
-letter.btn.save=임시저장
-letter.btn.report=신고
-letter.btn.submit=전송
+letter.btn.corr=Correction
+letter.btn.del=Delete
+letter.btn.send=📧Send a letter
+letter.btn.save=Save Temporarily
+letter.btn.report=Report
+letter.btn.submit=Send
 
 #신고
-letter.confirm.report=신고하시겠습니까?
-letter.report.blank=신고사유를 선택하세요.
-letter.report.text.empty=신고이유를 입력하세요.
-letter.report.input.placeholder=신고이유
+letter.confirm.report=Are you sure you want to report it?
+letter.report.blank=Please select a reason for reporting.
+letter.report.text.empty=Please enter a reason for reporting.
+letter.report.input.placeholder=Report Reason
 
-letter.report.title=신고
-letter.report.content=스팸게시물
-letter.report.lie=가짜정보 제공
-letter.report.sexual=성적인 내용
-letter.report.date=데이트가 목적인 내용
-letter.report.word=욕설/비방
-letter.report.etc=기타
-letter.report.block=차단
+letter.report.title=Report
+letter.report.content=Spam Posts
+letter.report.lie=Provide fake information
+letter.report.sexual=Sexual content
+letter.report.date=Content for the purpose of dating
+letter.report.word=Profanity/Slander
+letter.report.etc=Others
+letter.report.block=Block
 
-letter.report.success=신고되었습니다.
-letter.report.did=신고내역이 존재합니다.
+letter.report.success=Reported.
+letter.report.did=Your report exists.
 
 #편지작성영역
 letter.title.to=TO.{0}
-letter.title.write=답장쓰기
-letter.textarea.placeholder=편지를 작성해주세요.
+letter.title.write=Write a reply
+letter.textarea.placeholder=Please write your letter.
 
-letter.alert.blank=내용을 입력하세요.
-letter.alert.min=최소 500자를 입력해주세요.
-letter.alert.max=최대 10000바이트까지 입력 가능합니다.
-letter.alert.errormsg=에러가 발생했습니다. 관리자에게 문의해주세요.
+letter.alert.blank=Please enter your text.
+letter.alert.min=Please enter at least 500 characters.
+letter.alert.max=You can input up to 10000 bytes.
+letter.alert.errormsg=An error has occurred. Please contact the administrator.
 
-letter.confirm.send=편지를 전송하시겠습니까?
-letter.send.success=편지가 전송되었습니다.
-letter.send.fail=편지전송 실패
-letter.send.five=하루에 편지는 5통까지 보낼 수 있습니다. 내일 다시 시도해주세요.
+letter.confirm.send=Are you sure you want to send the letter?
+letter.send.success=Your letter has been sent.
+letter.send.fail=Failed to send letter
+letter.send.five=You can send up to 5 letters per day. Please try again tomorrow.
 
-letter.confirm.save=편지를 저장하시겠습니까?
-letter.confirm.save.no=편지작성이 취소되었습니다.
-letter.save.success=편지가 저장되었습니다.
-letter.save.fail=편지저장 실패
+letter.confirm.save=Are you sure you want to save the letter?
+letter.confirm.save.no=Your letter has been canceled.
+letter.save.success=Your letter has been saved.
+letter.save.fail=Failed to save letter
 
-letter.stamp.check=보유한 우표가 없습니다.
+letter.stamp.check=You do not have any stamps in your possession.
 
-letter.confirm.delete=편지를 삭제하시겠습니까?
-letter.delete.success=편지가 삭제되었습니다.
-letter.delete.fail=편지삭제 실패
-letter.confirm.no=취소되었습니다.
+letter.confirm.delete=Are you sure you want to delete the letter?
+letter.delete.success=our letter has been deleted.
+letter.delete.fail=Failed to delete letter
+letter.confirm.no=Canceled.
 
-letter.corr.success=작성되었습니다.
+letter.corr.success=Written.
 
 #편지교정영역
-letter.corr.card.title=교정내역
+letter.corr.card.title=Correction History
 
 #편지조회영역
-letter.in.hour=시간 후 도착
-letter.within.hour=한 시간 이내 도착
+letter.in.hour=hours
+letter.within.hour=Arrive within an hour
 
-letter.to.msg=편지가 오고 있어요. 조금만 기다려주세요. 편지가 배달오고 있습니다.
-letter.from.msg=편지가 가고 있어요. 조금만 기다려주세요. 편지 배달중입니다.  
+letter.to.msg=Your letter is coming. wait please. A letter is coming for delivery.
+letter.from.msg=A letter is on the way. wait please. The letter is being delivered.
 
 #편지작성창
-letter.popup.today.send=오늘은 이미 보내셨어요!
+letter.popup.today.send=You have already sent today!
 
 ############### 메인피드 ###################
 #생일
@@ -249,9 +249,9 @@ feed.feed.publish=Publish
 feed.feed.text=Share moments related to your language and culture
 feed.feed.photo=Photo
 feed.feed.tag=Tag
-feed.feed.stamp=스탬프 1개가 지급되었습니다
+feed.feed.stamp=1 stamp has been paid
 feed.insert.tag=Please enter your tags
-feed.confirm.delete=삭제하시겠습니까?
+feed.confirm.delete=Are you sure you want to delete it?
 
 #버튼
 feed.new=Newest
@@ -261,28 +261,28 @@ feed.ko=Korean
 feed.en=English
 
 #드롭다운
-feed.drop.trans=번역
-feed.drop.corr=교정
+feed.drop.trans=Translate
+feed.drop.corr=Correction
 feed.drop.report=Report
 feed.drop.update=Update
 feed.drop.delete=Delete
 
 #피드신고 
-feed.confirm.report=신고하시겠습니까?
-feed.report.blank=신고이유를 입력하세요.
-feed.report.text.empty=신고 사유를 선택하세요.
-feed.report.input.placeholder=신고이유
+feed.confirm.report=Are you sure you want to report it?
+feed.report.blank=Please enter a reason for reporting.
+feed.report.text.empty=Please select a reason for reporting.
+feed.report.input.placeholder=Report Reason
 
-feed.report.success=신고되었습니다.
-feed.report.did=신고내역이 존재합니다.
-feed.alert.errormsg=관리자에게 문의해주세요.
+feed.report.success=Reported.
+feed.report.did=Your report exists.
+feed.alert.errormsg=Please contact the administrator.
 
 feed.report.btn=Report
-feed.report.content=스팸게시물
-feed.report.lie=가짜정보 제공
-feed.report.sexual=성적인 내용
-feed.report.date=데이트가 목적인 내용
-feed.report.word=욕설/비방
+feed.report.content=Spam Posts
+feed.report.lie=Provide fake information
+feed.report.sexual=Sexual content
+feed.report.date=Content for the purpose of dating
+feed.report.word=swearing/slander
 feed.report.etc=Etc
 feed.report.block=Block
 
@@ -295,39 +295,39 @@ feed.check.stamp.plus=You got a stamp!
 feed.check.alert.errormsg=An error has occurred. Please contact the admin.
 
 #댓글
-comment.h4.title=댓글
-comment.btn.send=댓글달기
+comment.h4.title=Comments
+comment.btn.send=Send
 
-comment.alert.blank=댓글을 입력해주세요.
-comment.send.success=댓글이 작성되었습니다.
-comment.send.fail=댓글작성실패!
+comment.alert.blank=Please enter a comment.
+comment.send.success=Your comment has been written.
+comment.send.fail=Failed to write a comment!
 
-comment.confirm.delete=삭제하시겠습니까?
-comment.delete.success=댓글이 삭제되었습니다.
-comment.delete.fail=댓글삭제실패!
+comment.confirm.delete=Are you sure you want to delete it?
+comment.delete.success=Your comment has been deleted.
+comment.delete.fail=Failed to delete comment!
 
 comment.alert.errormsg=An error has occurred. Please contact the admin.
 
 #댓글작성
-comment.textarea.placeholder=댓글을 입력하세요.
+comment.textarea.placeholder=Please enter your comment.
 
 #댓글신고
-comment.confirm.report=신고하시겠습니까?
-comment.report.blank=신고사유를 선택하세요.
-comment.report.text.empty=신고이유를 입력하세요.
-comment.report.input.placeholder=신고이유
+comment.confirm.report=Are you sure you want to report it?
+comment.report.blank=Please select a reason for reporting.
+comment.report.text.empty=Please enter a reason for reporting.
+comment.report.input.placeholder=Report Reason
 
-comment.report.btn=신고
-comment.report.content=스팸게시물
-comment.report.lie=가짜정보 제공
-comment.report.sexual=성적인 내용
-comment.report.date=데이트가 목적인 내용
-comment.report.word=욕설/비방
-comment.report.etc=기타
-comment.report.block=차단
+comment.report.btn=Report
+comment.report.content=Spam Posts
+comment.report.lie=Provide fake information
+comment.report.sexual=Sexual content
+comment.report.date=Contents for the purpose of dating
+comment.report.word=Profanity/Slander
+comment.report.etc=Other
+comment.report.block=Block
 
-comment.report.success=신고되었습니다.
-comment.report.did=신고내역이 존재합니다.
+comment.report.success=Reported.
+comment.report.did=Report history exists.
 #-------------------------------------------------------
 ############### 친구찾기 ###################
 
