프로필 피드, 댓글 메세지 프로퍼티 적용. 우표사용내역에서 ID대신 이름 나오도록 처리.

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -100,7 +100,9 @@ profile.gender=Gender
 profile.aboutme=About Me
 profile.trips=Trips
 profile.posts=Posts
-
+profile.time=The letter will be delivered in {0}hours.
+profile.posts.edit=edit
+profile.posts.delete=delete
 
 ############### 프로필-수정 ###################
 usersUpdate.edit=Edit Basic Infos
