--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -101,6 +101,8 @@ profile.aboutme=자기소개
 profile.trips=방문한 나라
 profile.posts=게시글
 profile.time=편지가 {0}시간 후에 전달됩니다.
+profile.posts.edit=수정
+profile.posts.delete=삭제
 
 ############### 프로필-수정 ###################
 usersUpdate.edit=기본정보 수정
