메시지프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -98,7 +98,7 @@ profile.editdt=프로필 수정일
 profile.birth=생년월일
 profile.gender=성별
 profile.aboutme=자기소개
-profile.trips=방문한 나라
+profile.trips=방문한 도시
 profile.posts=게시글
 profile.time=편지가 {0}시간 후에 전달됩니다.
 profile.posts.edit=수정
