친구찾기 메시지프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -333,6 +333,8 @@ comment.report.did=신고내역이 존재합니다.
 #-------------------------------------------------------
 ############### 친구찾기 ###################
 #친구찾기옵션
+friends.search.title=검색조건
+friends.search.title2=제외조건
 friends.search.age=나이 
 friends.search.age.and=부터
 friends.search.gender=성별
