--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -332,6 +332,8 @@ comment.report.success=Reported.
 comment.report.did=Report history exists.
 #-------------------------------------------------------
 ############### 친구찾기 ###################
+friends.search.title=Search
+friends.search.title2=Exclude
 
 #친구찾기옵션
 friends.search.age=Age
@@ -361,7 +363,7 @@ friends.search.topic.count=
 friends.search.topic.count2= matching interests 
 friends.search.new= Join
 friends.search.more=Load More
-friends.people.count='s friends 
+friends.people.count= friends 
 #-------------------------------------------------------
 ############### 우표상점 ###################
 stamp.shop.title=STAMP SHOP
