친구 생일 메세지 프로퍼티 수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -223,7 +223,7 @@ letter.popup.today.send=You have already sent today!
 
 ############### 메인피드 ###################
 #생일
-feed.birth.msg1=´s {0}th Birthday!
+feed.birth.msg1='\'s {0}th Birthday!
 feed.birth.msg2=Send them your best wishes by writing a letter.
 
 #좋아요 
