비밀번호 찾기 버튼수정

--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_en.properties
@@ -390,7 +390,7 @@ id.title=Find ID
 id.title2=Check your Email.
 mail.title=Email
 enter.mail=Enter your email address
-check.button=Check
+check.button=Password Find
 verification.title=Verification Code
 enter.verification=Enter verification code
 verification.button=Verification
