--- a/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
+++ b/FinalPrj/src/main/webapp/WEB-INF/messages/message_ko_KR.properties
@@ -387,7 +387,7 @@ id.title=아이디 찾기
 id.title2=당신의 이메일 주소를 확인해보겠습니다.
 mail.title=이메일
 enter.mail=이메일 주소를 입력하세요
-check.button=확인
+check.button=비밀번호 찾기
 verification.title=인증번호
 enter.verification=인증번호를 입력하세요
 verification.button=인증하기
